homework_17/kube/postgres-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    component: postgres
spec:
  ports:
    - port: 5432
      targetPort: 5432
      nodePort: 0
  selector:
    name: postgres
