homework_17/kube/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: library
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: library
  type: ClusterIP
